<resources>
    <string name="app_name">Salvando Discreta</string>
    <string name="txt_description_1">Mejora, Aprende y Sorprende, pasando la materia en primera.</string>
    <string name="have_account">Ya tengo una cuenta</string>
    <string name="txt_description">description</string>
    <string name="login">Inicio de Sesión</string>
    <string name="user_name">Nombre de Usuario</string>
    <string name="enter_your_user_name">Ingresa un usuario</string>
    <string name="enter_your_password">Ingresa tu contraseña</string>
    <string name="your_forget_your_password">¿Olvidaste tu contraseña?</string>
    <string name="login_1">Inicia Sesión</string>
    <string name="account">¿No tienes una cuenta?</string>
    <string name="forgot_password">El usuario o contraseñas son incorrectos</string>
    <string name="reg_strate">Regístrate</string>
    <string name="reg_strate_1">Regístrate</string>
    <string name="regis_ter">Regístrate</string>
    <string name="recover_password">RECUPERAR CONTRASEÑA</string>
    <string name="message_recover_password">Para recuperar tu contraseña ingresa el correo electrónico con el que te registraste</string>
    <string name="enter_your_email">Ingresa tu correo</string>
    <string name="send_email">Enviar</string>
    <string name="change_pass">CAMBIAR CONTRASEÑA</string>
    <string name="new_pass">Contraseña Nueva</string>
    <string name="confirme_new_pass">Confirmar Contraseña Nueva</string>
    <string name="change_pass_word">Cambiar Contraseña</string>
    <string name="can_cel">Cancelar</string>
    <string name="contra_no_coinciden">Las contraseñas no coinciden</string>
    <string name="regi_strate">Regístrate!</string>
    <string name="des_crip_tion">Crea una cuenta para disfrutar de matemática discreta</string>
    <string name="tu_cuenta">Tu Cuenta</string>
    <string name="enter_your_email_user">Ingresa un correo electrónico</string>
    <string name="ingresa_una_contrase_a">Ingresa una contraseña</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="pass_wor_d">*********</string>
    <string name="repite_la_contrase_a">Repite la contraseña</string>
    <string name="reg_strate_user">Regístrate</string>
    <string name="correo_inva_lido">El correo ingresado es inválido</string>
    <string name="user_existente_descrip">El nombre de usuario ya existe</string>
    <string name="email_invalido">El correo ingresado no es válido</string>
    <string name="pass_word_no_coinciden">Las contraseñas no coinciden</string>
    <string name="descrip_tion_wel_come">Las matemáticas poseen no solo la verdad, sino cierta belleza suprema. Una belleza fría y austera, como la de una escultura.</string>
    <string name="refe_rence">Bertrand Russel (1872-1970) Filósofo,matemático y escritor británico.</string>
    <string name="inicia_a_aprender">Inicia a aprender</string>
    <string name="contra_incorrecta">Contraseña incorrecta</string>
    <string name="tablas_logicas_txt">Tablas lógicas</string>
    <string name="conjuntos_txt">Conjuntos</string>
    <string name="algebra_boole_string">Álgebra de boole</string>
    <string name="atring_probabilidad">Probabilidad</string>
    <string name="mate_discreta_plus">Mátematica Discreta +</string>
    <string name="tittle_operations_with_sets">OPERACIONES CON CONJUNTOS</string>
    <string name="definition1_operations_with_sets">Las operaciones con conjuntos también conocidas como álgebra de conjuntos, nos permiten realizar operaciones sobre los conjuntos para obtener otro conjunto. De las operaciones con conjuntos veremos las siguientes unión, intersección, diferencia, diferencia simétrica y complemento.</string>
    <string name="union_de_conjuntos">Unión de conjuntos</string>
    <string name="definition_union_sets">Es la operación que nos permite unir dos o más conjuntos para formar otro conjunto que contendrá a todos los elementos que queremos unir pero sin que se repitan. Es decir dado un conjunto A y un conjunto B, la unión de los conjuntos A y B será otro conjunto formado por todos los elementos de A, con todos los elementos de B sin repetir ningún elemento. El símbolo que se usa para indicar la operación de unión es el siguiente: ∪. Cuando usamos diagramas de Venn, para representar la unió de conjuntos, se sombrean los conjuntos que se unen o se forma uno nuevo. Luego se escribe por fuera la operación de unión.</string>
    <string name="example1">EJEMPLO 1</string>
    <string name="example1_union_sets">Dados dos conjuntos A={1,2,3,4,5,6,7,} y B={8,9,10,11} la unión de estos conjuntos será A∪B={1,2,3,4,5,6,7,8,9,10,11}.</string>
    <string name="exaple2">EJEMPLO 2</string>
    <string name="example2_union_sets">Dados dos conjuntos A={1,2,3,4,5} y B={4,5,6,7,8,9} la unión de estos conjuntos será A∪B={1,2,3,4,5,6,7,8,9}. Usando diagramas de Venn se tendría lo siguiente:</string>
    <string name="intersection_sets">Intersección de conjuntos</string>
    <string name="definition_intersection_sets">Es la operación que nos permite formar un conjunto, sólo con los elementos comunes involucrados en la operación. Es decir dados dos conjuntos A y B, la de intersección de los conjuntos A y B, estará formado por los elementos de A y los elementos de B que sean comunes, los elementos no comunes A y B, será excluidos. El símbolo que se usa para indicar la operación de intersección es el siguiente:</string>
    <string name="example1_intersection">EJEMPLO 1</string>
    <string name="example1_intersection_sets">Dados dos conjuntos A={1,2,3,4,5} y B={4,5,6,7,8,9} la intersección de estos conjuntos será A∩B={4,5}. Usando diagramas de Venn se tendría lo siguiente:</string>
    <string name="diference_sets">Diferencia de conjuntos</string>
    <string name="definition_diference_sets">Es la operación que nos permite formar un conjunto, en donde de dos conjuntos el conjunto resultante es el que tendrá todos los elementos que pertenecen al primero pero no al segundo. Es decir dados dos conjuntos A y B, la diferencia de los conjuntos entra A y B, estará formado por todos los elementos de A que no pertenezcan a B. El símbolo que se usa para esta operación es el mismo que se usa para la resta o sustracción, que es el siguiente:</string>
    <string name="example1_diference">EJEMPLO 1</string>
    <string name="example1_diference_sets">Dados dos conjuntos A={1,2,3,4,5} y B={4,5,6,7,8,9} la diferencia de estos conjuntos será A-B={1,2,3}. Usando diagramas de Venn se tendría lo siguiente:</string>
    <string name="example2_diference">EJEMPLO 2</string>
    <string name="example2_diference_sets">Dados dos conjuntos A={1,2,3,4,5} y B={4,5,6,7,8,9} la diferencia de estos conjuntos será B-A={6,7,8,9}. Usando diagramas de Venn se tendría lo siguiente:</string>
    <string name="complement_of_set">Complemento de un conjunto</string>
    <string name="definition_complement_set">Es la operación que nos permite formar un conjunto con todos los elementos del conjunto de referencia o universal, que no están en el conjunto. Es decir dado un conjunto A que esta incluido en el conjunto universal U, entonces el conjunto complemento de A es el conjunto formado por todos los elementos del conjunto universal pero sin considerar a los elementos que pertenezcan al conjunto A. En esta operación el complemento de un conjunto se denota con un apostrofe sobre el conjunto que se opera, algo como esto A\' en donde el el conjunto A es el conjunto del cual se hace la operación de complemento.</string>
    <string name="example1_complement">EJEMPLO 1</string>
    <string name="example1_complement_set">Dado el conjunto Universal U={1,2,3,4,5,6,7,8,9} y el conjunto A={1,2,9}, el conjunto A\' estará formado por los siguientes elementos A\'={3,4,5,6,7,8}. Usando diagramas de Venn se tendría lo siguiente:</string>
    <string name="to_practice">A practicar</string>
    <string name="lesson_sets">LECCIÓN: CONJUNTOS</string>
    <string name="info_sets">El matemático alemán G. Cantor introdujo el concepto de conjunto. Definió un conjunto como una colección de objetos definidos y distinguibles seleccionados mediante ciertas reglas o descripciones.</string>
    <string name="more_info_sets">La teoría de conjuntos constituye la base de otros muchos campos de estudio, como la teoría del recuento, las relaciones, la teoría de grafos y las máquinas de estados finitos. En este capítulo trataremos los distintos aspectos de la teoría de conjuntos.</string>
    <string name="definition_set">Intuitivamente, un conjunto es cualquier colección de objetos que pueda tratarse como una entidad. A cada objeto de la colección lo llamaremos elemento o miembro del conjunto.</string>
    <string name="operations_sets">Ejemplos</string>
    <string name="tittle_complete_tables">COMPLETAR LAS TABLAS</string>
    <string name="answers">Respuestas</string>
    <string name="table_1">Tabla 1. La negación</string>
    <string name="p_answer1">Si la proposición p es verdadera (V) se tiene que ¬p es (F), se simboliza en la siguiente tabla.</string>
    <string name="table_2">Tabla 2. La conjunción</string>
    <string name="p_table_2"><![CDATA[La conjunción relaciona dos proposiciones, cada una de ellas tiene dos valores de verdad posibles (F o V), por lo tanto, la tabla tiene 4 posibilidades de valores de verdad.  Note que la conjunción de dos proposiciones es verdadera cuando las dos son verdaderas.]]></string>
    <string name="table_3">Tabla 3. La disyunción</string>
    <string name="lesson_truth_tables">LECCIÓN: TABLAS DE VERDAD</string>
    <string name="def_truth_table">Una tabla de verdad es un instrumento que nos permite analizar los valores de verdad que una proposición simple o compuesta puede asumir de acuerdo con determinada interpretación. También nos sirve para evaluar la validez de los argumentos deductivos.</string>
    <string name="def2_truth_table">En la Lógica que estudiamos se conoce como Lógica bivalente, es decir que sólo se manejan dos valores de verdad: verdadero (que se abrevia con V) y falso (que se abrevia con F). Antes de adentrarte al tema es importante que repasemos la tabla de las conectivas lógicas.</string>
    <string name="lets_start">Hoy sí, comencemos</string>
    <string name="truth_values"><![CDATA[Para poder realizar dicho análisis, debemos de conocer cuáles son los valores de verdad de cada una de las conectivas existentes. Y cada una de las conectivas tiene su tabla de verdad, en donde nos señala los criterios para decir cuando una proposición es verdadera o falsa. Los conectores lógicos reciben como argumentos valores de verdad. Así, la nueva proposición formada por el conector tendrá uno y solo un valor de verdad que dependerá de los valores de verdad de las proposiciones que la forman y del tipo de conector que las une.  Representaremos los conectores lógicos mediante mediante las tablas de verdad, en el cual cada fila representa una posible combinación de valores de verdad. ]]></string>
    <string name="what_about">¿De qué trata?</string>
    <string name="img_description_union_sets">Imagen representativa union de conjuntos</string>
    <string name="img_intersection_sets">Imagen representativa de la interseccion de conjuntos</string>
    <string name="img_diference_sets">Imagen representativa diferencia de conjuntos</string>
    <string name="img2_diference_sets">Imagen representativa de ejemplo dos diferencia de conjuntos</string>
    <string name="img_complement_set">Imagen representativa de complemento de un conjunto</string>
    <string name="complete_tables_btn">Completa las tablas</string>
    <string name="img_conective">Imagen de ejemplo de conectivos logicos</string>
</resources>