<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="327dp"
        android:layout_height="74dp"
        android:layout_marginTop="24dp"
        android:letterSpacing="0.25"
        android:text="@string/lesson_truth_tables"
        android:textAlignment="center"
        android:textColor="@color/morado_oscuro"
        android:textStyle="bold"
        android:textSize="@dimen/Tittles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle_definition"
        android:lineSpacingExtra="1.5sp"
        android:text="@string/def_truth_table"
        android:textColor="@color/morado_oscuro"
        android:textSize="@dimen/paragraph"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="1.5sp"
        android:text="@string/def2_truth_table"
        android:textAlignment="textStart"
        android:textColor="@color/morado_oscuro"
        android:textSize="@dimen/paragraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageViewConectives"
        android:layout_width="280dp"
        android:layout_height="214dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logical_conectives"
        android:contentDescription="@string/img_conective"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="246dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/lets_start"
        android:textColor="@color/morado_oscuro"
        android:textSize="@dimen/paragraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageViewConectives" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="1.5sp"
        android:text="@string/truth_values"
        android:textColor="@color/morado_oscuro"
        android:textSize="@dimen/paragraph"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/buttonWhatAbout"
        android:layout_width="257dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorfucsia"
        android:gravity="center"
        android:text="@string/what_about"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_size"
        android:textStyle="bold"
        app:cornerRadius="25dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonCompleteTables"
        android:layout_width="257dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorfucsia"
        android:text="@string/complete_tables_btn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_size"
        android:textStyle="bold"
        app:cornerRadius="25dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonWhatAbout"
        app:layout_constraintStart_toStartOf="@+id/buttonWhatAbout"
        app:layout_constraintTop_toBottomOf="@+id/buttonWhatAbout" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>